--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.0",
+    "faker": "^5.5.3",
+    "keen-slider": "^6.8.6",
+    "leaflet": "^1.9.4",
+    "next": "14.0.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.0.0"
+    "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.7",
+    "@types/react-leaflet": "^3.0.0",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3"
